# ComfyUI-KittenTTS

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
KittenTTS/: .gitignore  README.md  example.py
KittenTTS/kittentts/: get_model.py  onnx_model.py
example_workflow/: kittenTTS_example_workflow.json
nodes/: __init__.py  kittentts_node.py  utils.py
whl/: kittentts-0.8.0-py3-none-any.whl
